--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -35,7 +35,7 @@
   --text-font: Times, "Times New Roman", "Free Serif", "Noto Serif", TimesNewRomanPSMT, "Droid Serif";
 
   --link-color: var(--blue);
-  --link-hover-color: #1c7ed6;
+  --link-hover-color: #a429fd;
 
   --heading-color: var(--gray-900);
 
