--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: default
   </section>
   {% endfor %}
   {%- if jekyll.environment == "production" and site.disqus -%}
-    <script id="dsq-count-scr" src="//{{ site.disqus }}.disqus.com/count.js" async></script>
+    <script id="dsq-count-scr" src="//yunn.disqus.com/count.js" async></script>
   {%- endif -%}
 </div>
 
