--- a/_includes/sidebar-left.html
+++ b/_includes/sidebar-left.html
@@ -27,14 +27,14 @@
   </nav>
   {%- endif -%}
   {% if site.data.social -%}
-    <!-- <div class="social pure-menu pure-menu-horizontal">
-      <ul class="social-icons pure-menu-list">
+    <div class="social pure-menu pure-menu-horizontal">
+      <!-- <ul class="social-icons pure-menu-list">
       {% for social in site.data.social -%}
         <li class="pure-menu-item">
           <a class="social-icon pure-menu-link" href="{{ social.url }}">
             <i class="{{ social.icon | default: 'fas fa-link' }}" title="{{ social.title }}"></i>
-          </a>
-        </li> -->
+          </a> -->
+        </li>
       {%- endfor %}
       </ul>
     </div>
