--- a/_includes/sidebar-left.html
+++ b/_includes/sidebar-left.html
@@ -6,7 +6,7 @@
       {%- else -%}
         {%- assign avatar = site.avatar | relative_url -%}
       {%- endif -%}
-      <img src="{{ avatar }}" class="avatar-image" alt="{{ site.author.name }}">
+      <img src="{{ avatar }}" class="avatar-image">
     </div>
   {%- endif %}
   <div class="masthead-title">
@@ -27,16 +27,16 @@
   </nav>
   {%- endif -%}
   {% if site.data.social -%}
-    <div class="social pure-menu pure-menu-horizontal">
-      <!-- <ul class="social-icons pure-menu-list">
+    <!-- <div class="social pure-menu pure-menu-horizontal">
+      <ul class="social-icons pure-menu-list">
       {% for social in site.data.social -%}
         <li class="pure-menu-item">
           <a class="social-icon pure-menu-link" href="{{ social.url }}">
             <i class="{{ social.icon | default: 'fas fa-link' }}" title="{{ social.title }}"></i>
-          </a> -->
+          </a>
         </li>
       {%- endfor %}
       </ul>
-    </div>
+    </div> -->
   {%- endif %}
 </header>
