--- a/_includes/sidebar-left.html
+++ b/_includes/sidebar-left.html
@@ -26,8 +26,8 @@
     </ul>
   </nav>
   {%- endif -%}
-  {% if site.data.social -%}
-    <!-- <div class="social pure-menu pure-menu-horizontal">
+  <!-- {% if site.data.social -%}
+    <div class="social pure-menu pure-menu-horizontal">
       <ul class="social-icons pure-menu-list">
       {% for social in site.data.social -%}
         <li class="pure-menu-item">
@@ -37,6 +37,6 @@
         </li>
       {%- endfor %}
       </ul>
-    </div> -->
-  {%- endif %}
+    </div>
+  {%- endif %} -->
 </header>
